fix: updated the app logo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/TBP_logo.jpeg" />
+    <link rel="icon" type="image/png" href="/TBP_logo.png" sizes="any" />
+    <link rel="apple-touch-icon" href="/TBP_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TBP Global Strategist</title>
   </head>
